# ase-discord-bot

./: .buildinfo  .env.example  .gitignore  .pre-commit-config.yaml  CNAME  README.md  configuration.html  docker_setup.html  genindex.html  index.html  installation.html  objects.inv  project_structure.html  py-modindex.html  pyproject.toml  scripts.html  search.html  searchindex.js  usage.html
.github/workflows/: autopep8-flake8.yml  dockerize.yml  gen-sphinx-docs.yml
_modules/: ase_discord_bot.ai.html  ase_discord_bot.api_util.html  ase_discord_bot.api_util.model.html  ase_discord_bot.bot.html  ase_discord_bot.html  ase_discord_bot.util.html  modules.html
_sources/: index.rst.txt  usage.rst.txt
_sources/_modules/: ase_discord_bot.ai.rst.txt  ase_discord_bot.api_util.model.rst.txt  ase_discord_bot.api_util.rst.txt  ase_discord_bot.bot.rst.txt  ase_discord_bot.rst.txt  ase_discord_bot.util.rst.txt  modules.rst.txt
assets/: languages.json
docker/: Dockerfile  docker-compose.build.yml  docker-compose.yml
docs/source/: conf.py  configuration.rst  docker_setup.rst  index.rst  installation.rst  project_structure.rst  scripts.rst  usage.rst
scripts/: build.sh  dockerize.sh  generate-docs.sh  generate_genre_enums.py  generate_languages_enum.py  install-deps.sh  run.sh  test.sh
src/: config.py  logger_config.py  main.py
src/ase_discord_bot/: config.py  config_registry.py  main.py
src/ase_discord_bot/ai/: summary.py
src/ase_discord_bot/api_util/: api_calls.py
src/ase_discord_bot/bot/: discord_bot.py  msg_format.py
src/ase_discord_bot/util/: path_parser.py  type_checks.py
src/bot/: discord_bot.py
src/util/: path_parser.py
test/integration/: test_languages.py
test/unit/: test_config.py  test_config_registry.py  test_filters.py  test_genres.py  test_languages_unit.py  test_msg_format.py  test_path_parser.py  test_summary.py  test_type_checks.py
(+6 files in other folders)
