[project]
name = "ase-discord-bot"
version = "0.0.1"
description = "Discord bot that provides movie/series recommendations"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = ["dotenv (>=0.9.9,<0.10.0)", "py-cord (>=2.6.1,<3.0.0)", "coloredlogs (>=15.0.1,<16.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"