[project]
name = "ase-discord-bot"
version = "0.0.1"
description = "Discord bot that provides movie/series recommendations"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "py-cord (>=2.6.1,<3.0.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "audioop-lts (>=0.2.1,<0.3.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "yarl (>=1.18.3,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "openai (>=1.68.2,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "ase_discord_bot", from = "src" }]

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"